2025-10-15T12:30:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18528903389 # 1284
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-15
* notice: last 14d: unq all: 6 21
* notice: prev accum: outdated-unq outdated-all / unq all: 2981 5371 / 3002 5393
* notice: next accum: outdated-unq outdated-all / unq all: 2983 5373 / 3003 5394
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-01] / [2025-10-15]

2025-10-15T01:06:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18514512218 # 1283
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-15
* notice: last 14d: unq all: 6 21
* notice: prev accum: outdated-unq outdated-all / unq all: 2979 5369 / 3002 5393
* notice: next accum: outdated-unq outdated-all / unq all: 2981 5371 / 3002 5393
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [2025-09-30] / [2025-10-01]

2025-10-14T12:29:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18496541821 # 1282
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-14
* notice: last 14d: unq all: 7 23
* notice: prev accum: outdated-unq outdated-all / unq all: 2979 5369 / 3001 5392
* notice: next accum: outdated-unq outdated-all / unq all: 2979 5369 / 3002 5393
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-10-14]

2025-10-14T01:04:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18482284945 # 1281