@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-15T12:30:25Z",
-  "count_outdated" : 5373,
-  "uniques_outdated" : 2983,
-  "count" : 5394,
-  "uniques" : 3003,
+  "timestamp" : "2025-10-16T01:05:24Z",
+  "count_outdated" : 5374,
+  "uniques_outdated" : 2984,
+  "count" : 5396,
+  "uniques" : 3005,
   "clones" : [
-    {
-      "timestamp": "2025-10-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-10-03T00:00:00Z",
       "count": 2,
@@ -115,12 +106,12 @@
     },
     {
       "timestamp": "2025-10-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 1, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
