@@ -1,12 +1,7 @@
 {
-  "count": 21,
-  "uniques": 6,
+  "count": 22,
+  "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2025-10-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-10-03T00:00:00Z",
       "count": 2,
@@ -64,8 +59,8 @@
     },
     {
       "timestamp": "2025-10-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
