@@ -1,3 +1,12 @@
+2025-10-16T01:05:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18547055518 # 1285
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-16
+* notice: last 14d: unq all: 7 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 2983 5373 / 3003 5394
+* notice: next accum: outdated-unq outdated-all / unq all: 2984 5374 / 3005 5396
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +3 +3 -0 -0 / 3 3
+* notice: removed / changed dates: [2025-10-02] / [2025-10-15]
+
 2025-10-15T12:30:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18528903389 # 1284
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-15
